# FlowBox

./: .gitignore  AI 提效工具箱.md  README.md  package-lock.json  package.json  remove_bg.py
docs/: ARCHITECTURE.md  FEATURE.md  FRONTEND_ARCHITECTURE.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_error_logs.sql  003_butler_messages.sql  004_cross_link.sql  005_butler_skills.sql  006_trending.sql
src-tauri/src/: errors.rs  lib.rs
src-tauri/src/commands/: app_usage.rs  butler.rs  clipboard.rs  mod.rs  obsidian.rs  screenshot.rs  voice.rs
src-tauri/src/models/: app_usage.rs  clipboard.rs  common.rs  idea.rs  mod.rs  pomodoro.rs  todo.rs  voice.rs
src-tauri/src/services/: app_usage_tracker.rs  butler_shortcut.rs  clipboard_watcher.rs  mod.rs  mod_placeholder.rs  obsidian_export.rs  voice_recorder.rs  voice_transcribe.rs
src/hooks/: useDatabase.ts  (+10 more)
tests/: butler-escape-close.test.mjs  butler-overlay-backend.test.mjs  butler-service-image-analysis.test.mjs  butler-shortcut-config.test.mjs  clipboard-default-watch.test.mjs  clipboard-image-flow.test.mjs  clipboard-tauri-check.test.mjs  markdown-code-theme-config.test.mjs  markdown-code-theme-preference.test.mjs  markdown-code-theme-toggle.test.mjs  markdown-code-whitespace.test.mjs  markdown-copy-theme-export.test.mjs  markdown-obsidian-export.test.mjs  markdown-table-render.test.mjs  markdown-wechat-code-style.test.mjs  sql-capability.test.mjs  tauri-asset-protocol.test.mjs  (+10 more)
(+79 files in other folders)
